add get all operations and update swagger and postman
