# advertising_app/domain/usecase/src/main/java/co/com/agency/usecase/dealer/DealerUseCase.java
@@ -2,7 +2,10 @@ package co.com.agency.usecase.dealer;
 
 import co.com.agency.model.dealer.Dealer;
 
+import java.util.List;
+
 public interface DealerUseCase {
     Dealer save(Dealer dealer);
     void thrownExceptionIfDealerNotExist(Dealer dealer);
+    List<Dealer> getAllDealer();
 }
