# advertising_app/infrastructure/entry-points/api-rest/src/main/java/co/com/agency/api/dealer/DealerController.java
@@ -11,6 +11,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
+import java.util.List;
+
 @RestController
 @RequestMapping(value = "/agency/api/v1", produces = MediaType.APPLICATION_JSON_VALUE)
 @AllArgsConstructor
@@ -23,5 +26,20 @@ public class DealerController implements DealerOperations{
         Dealer dealer = dealerUseCase.save(Dealer.builder().name(body.getName()).build());
         return new ResponseEntity<DealerResponse>(DealerResponse.builder().id(dealer.getId().toString())
                 .name(dealer.getName()).build(), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<DealerResponse>> getAllDealer() {
+        List<Dealer> dealerList = dealerUseCase.getAllDealer();
+        return new ResponseEntity<List<DealerResponse>>(parse(dealerList), HttpStatus.OK);
+    }
+
+    private List<DealerResponse> parse(List<Dealer> dealerList){
+        List<DealerResponse> dealerResponses = new ArrayList<>();
+        for (Dealer dealer:dealerList) {
+            dealerResponses.add(DealerResponse.builder().id(dealer.getId().toString()).name(dealer.getName()).build());
+        }
+
+        return dealerResponses;
     }
 }
